# ESP32-C3_Web_Server

Client_TUYA/: .cproject  .mxproject  .project  Client_TUYA Debug.launch  Client_TUYA Release.launch  Client_TUYA.ioc  Client_TUYA.launch
Client_TUYA/Core/Inc/: Regim.h  TUYA.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Client_TUYA/Core/Src/: Regim.c  TUYA.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Client_TUYA/Debug/: Client_TUYA.elf  Client_TUYA.list  Client_TUYA.map  NAM_stanok.elf  NAM_stanok.list  NAM_stanok.map  Oxygen.elf  Oxygen.list  Oxygen.map  makefile
Client_TUYA/Debug/Core/Src/: Regim.su  TUYA.cyclo  TUYA.d  TUYA.su  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
Client_TUYA/Release/: Client_TUYA.elf  Client_TUYA.list  Client_TUYA.map  objects.list
Client_TUYA/Release/Core/Src/: Regim.cyclo  (+10 more)
Web_Server/: .cproject  .project  Async_Web_Server Configuration (1).launch  Async_Web_Server Configuration.launch  Async_Web_Server.launch  Async_server.launch  CMakeLists.txt  New_configuration (1).launch  New_configuration.launch  Web_Server Configuration.launch  app-template.elf.launch  convert.py  esp_hid_host.launch  partition.csv  partitions.csv  sdkconfig  sdkconfig.old  spiffs Configuration.launch  spiffs.launch  station Configuration.launch  station.launch
Web_Server/data/: index.html  power-settings.js  scripts.js  settings.html  style.css
Web_Server/main/: .cproject  CMakeLists.txt  idf_component.yml  main.c  uart.c  uart.h
(+33 files in other folders)
